# mimalloc-rs

./: Cargo.toml  LICENSE  build.rs
src/: lib.rs
